remove java 8 syntax